--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -39,10 +39,14 @@ http {
         listen       80 default_server;
         listen       [::]:80 default_server;
         server_name  _;
-        root         http://192.168.150.10:8080/public;
+        root         http://192.168.150.10/public;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
+
+        location / {
+		    proxy_pass http://192.168.150.10:8080;
+        }
 
         location /api/todos {
 		    proxy_pass http://192.168.150.10:8080;
